# Breakout-Game

./: .gitignore  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameSingle.cpp  GameSingle.h  Network.cpp  Network.h  NetworkMessage.h  Paddle.cpp  Paddle.h  Particle.cpp  Particle.h  ParticlePool.cpp  ParticlePool.h  PhysicalObject.cpp  PhysicalObject.h  PowerUp.cpp  PowerUp.h  PowerUpEffect.cpp  PowerUpEffect.h  RectangleObject.cpp  RectangleObject.h  VisualObject.cpp  VisualObject.h  config.json  levels.json  main.cpp  test_ball_brick_collision.cpp
